- Add README file - Update instrumentation test cases - Some minor fixes for running a default search when the app is opened

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         buildConfigField "String", "SHUTTERSTOCK_URL", "\"${project.shutterstockURL}\""
         buildConfigField "String", "CLIENT_ID", "\"${project.clientId}\""
         buildConfigField "String", "CLIENT_SECRET", "\"${project.clientSecret}\""
+        buildConfigField "String", "CATEGORY", "\"${project.category}\""
     }
     buildTypes {
         release {
