--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ project.ext {
     shutterstockURL = "https://api.shutterstock.com/"
     clientId="YOUR_CLIENT_ID"
     clientSecret="YOUR_CLIENT_SECRET"
+    category = "Abstract"
 }
